# robosuite-diffusion-policy

./: .gitignore  EXPERIMENTS.md  README.md  benchmark.py  benchmark_robomimic.py  debug_obs_mismatch.py  debug_policy.py  eval_modal.py  explore_data.ipynb  main.py  policy.py  pyproject.toml  test_overfit.py  train_modal.py  train_robomimic_modal.py
data/: __init__.py  dataset.py
envs/: __init__.py  robosuite_wrapper.py
eval/: __init__.py  evaluate.py
