[project]
name = "diffusion-policy"
version = "0.1.0"
description = "Diffusion Policy for robotic manipulation with robosuite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.36.0",
    "torch>=2.10.0",
    "numpy>=1.24.0",
    "h5py>=3.9.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.8",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "mujoco>=3.0.0",
    "gymnasium>=0.29.0",
    "robosuite",
    "tyro>=1.0.5",
    "pandas>=2.3.3",
    "ipykernel>=7.1.0",
    "modal>=0.73.0",
]

[project.scripts]
diffusion-policy = "main:main"

[tool.setuptools]
py-modules = ["main", "policy"]
packages = ["data", "envs", "eval"]

[tool.uv.sources]
robosuite = { git = "https://github.com/ARISE-Initiative/robosuite.git" }
